# aura-backend

./: .env  .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/core/: db.py  dependencies.py
app/repo/: incidents.py  profiles.py  votes.py
app/routers/: authentication.py  friends.py  incidents.py  profile.py  votes.py
app/schemas/: friends.py  incident.py  user.py  votes.py
app/sql/: incidents.sql  users.sql
app/utilities/: user_utility.py
